// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors reducer should handle CLEAR_ERRORS 1`] = `
Object {
  "byId": Object {
    "global": Array [],
    "id1": Array [
      "message 1",
      "message 2",
    ],
    "id2": Array [
      "message 3",
      "message 4",
    ],
  },
}
`;

exports[`errors reducer should handle SET_ERRORS 1`] = `
Object {
  "byId": Object {
    "global": Array [
      "error message 1",
      "error message 2",
    ],
    "id1": Array [
      "message 1",
      "message 2",
    ],
    "id2": Array [
      "message 3",
      "message 4",
    ],
  },
}
`;

exports[`errors reducer should return the initial state 1`] = `
Object {
  "byId": Object {},
}
`;

exports[`errors selectors getById should return array with id1 1`] = `
Array [
  "message 1",
  "message 2",
]
`;

exports[`errors selectors getGlobal should return array with id global 1`] = `
Array [
  "global message",
]
`;
